add the top detail nav and main nav

--- a/src/template.html
+++ b/src/template.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1.0'>
 	<meta name='theme-color' content='#333333'>
+	<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+	<script src="https://cdn.tailwindcss.com"></script>
 
 	%sapper.base%
 
@@ -20,6 +23,7 @@
 	     the current page has one -->
 	%sapper.head%
 </head>
+
 <body>
 	<!-- The application will be rendered inside this element,
 	     because `app/client.js` references it -->
@@ -30,4 +34,5 @@
 	     initialise the router -->
 	%sapper.scripts%
 </body>
+
 </html>
